# plutus-pioneer-program

code/week02/src/Week02/: Homework1.hs  Homework2.hs
code/week03/: plutus-pioneer-program-week03.cabal
code/week03/src/Week03/: Homework1.hs  Homework2.hs  SimpleGrabTraceTest.hs
code/week04/src/Week04/: Homework.hs
code/week05/: plutus-pioneer-program-week05.cabal
code/week05/src/Week05/: Homework1.hs  Homework2.hs  PolicyProblem.hs
code/week05/test/: Main.hs
code/week05/test/Week05/: Homework1Tests.hs
code/week07/src/Week07/: RockPaperScissors.hs  TestRockPaperScissors.hs
code/week08/: plutus-pioneer-program-week08.cabal
code/week08/test/: Spec.hs
